# VLMotion

./: .dockerignore  .gitignore  README.md  environment.sh
docker/: Dockerfile  docker-compose.yml  run.sh  stop.sh
ros2_ws/src/audio_common/: README.md
ros2_ws/src/audio_common/sound_play/: CMakeLists.txt
ros2_ws/src/audio_common/sound_play_msgs/: CMakeLists.txt  README.md
ros2_ws/src/audio_common/speech_recognition_msgs/: CMakeLists.txt
ros2_ws/src/audio_listener_worker/: INTEGRATION_SUMMARY.md  INTEGRATION_TEST.md  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/audio_listener_worker/audio_listener_worker/: audio_listener_node.py
ros2_ws/src/vlpoint/: package.xml  setup.cfg  setup.py
ros2_ws/src/vlpoint/launch/: controller.launch.py  vlpoint.launch.py  worker.launch.py
ros2_ws/src/vlpoint/point/: __init__.py  constants.py  mm_utils.py  utils.py
ros2_ws/src/vlpoint/point/eval/: model_vqa.py  run_llava.py
ros2_ws/src/vlpoint/point/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  llava_arch.py  make_delta.py
ros2_ws/src/vlpoint/point/model/language_model/: llava_llama.py  llava_mistral.py  llava_mpt.py
ros2_ws/src/vlpoint/point/model/multimodal_encoder/: builder.py  clip_encoder.py  sam3_encoder.py
ros2_ws/src/vlpoint/point/serve/: cli.py  controller.py  gradio_web_server.py  model_worker.py  pyqt_server.py  sglang_worker.py  test_message.py
ros2_ws/src/vlpoint/point/train/: train.py  train_mem.py  train_xformers.py
ros2_ws/src/vlservo/: package.xml  setup.cfg  setup.py
ros2_ws/src/vlservo/VLServo/: __init__.py  (+12 more)
(+3 files in other folders)
